--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^7.9.5",
     "recharts": "^2.15.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
